5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_2425.log
== TEST (2019-03-26 16:15:50) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:16:31) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C,3)input(km/l))
-- ERROR:
File "XXXX", line 4
    print(round(D/C,3)input(km/l))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:28) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C,3)km/l)
-- ERROR:
File "XXXX", line 4
    print(round(D/C,3)km/l)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:39) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(D/C,3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:17:55) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/Ckm/l,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(D/Ckm/l,3))
NameError: name 'Ckm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:18:16) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C"km/l",3))
-- ERROR:
File "XXXX", line 4
    print(round(D/C"km/l",3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:18:53) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:19:31) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)+" km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(D/C ,3)+" km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:02) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(str(round(D/C ,3))+" km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:20:08) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(str(round(D/C ,3))+" km/l")
-- EXECUTION TIME:
0.210629
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:16:19) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3))," km/l"
-- EXECUTION TIME:
0.186542
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:16:31) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)," km/l")
-- EXECUTION TIME:
0.19163
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286  km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119  km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802  km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:20:36) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)," km/l")
-- EXECUTION TIME:
0.169375
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286  km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119  km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802  km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:08:15) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)" km/l")
-- ERROR:
File "XXXX", line 4
    print(round(D/C ,3)" km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:08:23) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)," km/l")
-- EXECUTION TIME:
0.190763
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286  km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119  km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802  km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:08:28) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)," km/l")
-- OUTPUT:
14.286  km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:08:56) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3)," km/l")
-- OUTPUT:
14.286  km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:10:12) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:10:12) 
-- CODE:
D=float(input("distancia: "))
C=float(input("litros: "))

print(round(D/C ,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
